Optimization - Mobile optimization - Fixing Contrast issues - Scroll bar is now well visible - New description - Ready for production

--- a/components/styles/Header.module.css
+++ b/components/styles/Header.module.css
@@ -23,3 +23,13 @@
   font-size: 36px;
   color: var(--special-color);
 }
+
+@media only screen and (max-width: 750px) {
+  .title {
+    font-size: 28px;
+  }
+
+  .newProject {
+    padding: 6px 15px;
+  }
+}
